qt/gen_qlistview.h

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QKeyEvent QKeyEvent;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QPaintEngine QPaintEngine;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QListView_override_virtual_visualRegionForSelection(void* self, intptr_t slot);
bool QListView_override_virtual_selectedIndexes(void* self, intptr_t slot);
struct miqt_array /* of QModelIndex* */  QListView_virtualbase_selectedIndexes(const void* self);
bool QListView_override_virtual_updateGeometries(void* self, intptr_t slot);
void QListView_virtualbase_updateGeometries(void* self);
bool QListView_override_virtual_isIndexHidden(void* self, intptr_t slot);
bool QListView_virtualbase_isIndexHidden(const void* self, QModelIndex* index);
bool QListView_override_virtual_selectionChanged(void* self, intptr_t slot);
void QListView_virtualbase_selectionChanged(void* self, QItemSelection* selected, QItemSelection* deselected);
bool QListView_override_virtual_currentChanged(void* self, intptr_t slot);
void QListView_virtualbase_currentChanged(void* self, QModelIndex* current, QModelIndex* previous);
bool QListView_override_virtual_viewportSizeHint(void* self, intptr_t slot);
QSize* QListView_virtualbase_viewportSizeHint(const void* self);
bool QListView_override_virtual_setModel(void* self, intptr_t slot);
void QListView_virtualbase_setModel(void* self, QAbstractItemModel* model);
bool QListView_override_virtual_setSelectionModel(void* self, intptr_t slot);
void QListView_virtualbase_setSelectionModel(void* self, QItemSelectionModel* selectionModel);
bool QListView_override_virtual_keyboardSearch(void* self, intptr_t slot);
void QListView_virtualbase_keyboardSearch(void* self, struct miqt_string search);
bool QListView_override_virtual_sizeHintForRow(void* self, intptr_t slot);
int QListView_virtualbase_sizeHintForRow(const void* self, int row);
bool QListView_override_virtual_sizeHintForColumn(void* self, intptr_t slot);
int QListView_virtualbase_sizeHintForColumn(const void* self, int column);
bool QListView_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QListView_virtualbase_inputMethodQuery(const void* self, int query);
bool QListView_override_virtual_selectAll(void* self, intptr_t slot);
void QListView_virtualbase_selectAll(void* self);
bool QListView_override_virtual_updateEditorData(void* self, intptr_t slot);
void QListView_virtualbase_updateEditorData(void* self);
bool QListView_override_virtual_updateEditorGeometries(void* self, intptr_t slot);
void QListView_virtualbase_updateEditorGeometries(void* self);
bool QListView_override_virtual_verticalScrollbarAction(void* self, intptr_t slot);
void QListView_virtualbase_verticalScrollbarAction(void* self, int action);
bool QListView_override_virtual_horizontalScrollbarAction(void* self, intptr_t slot);
void QListView_virtualbase_horizontalScrollbarAction(void* self, int action);
bool QListView_override_virtual_verticalScrollbarValueChanged(void* self, intptr_t slot);
void QListView_virtualbase_verticalScrollbarValueChanged(void* self, int value);
bool QListView_override_virtual_horizontalScrollbarValueChanged(void* self, intptr_t slot);
void QListView_virtualbase_horizontalScrollbarValueChanged(void* self, int value);
bool QListView_override_virtual_closeEditor(void* self, intptr_t slot);
void QListView_virtualbase_closeEditor(void* self, QWidget* editor, int hint);
bool QListView_override_virtual_commitData(void* self, intptr_t slot);
void QListView_virtualbase_commitData(void* self, QWidget* editor);
bool QListView_override_virtual_editorDestroyed(void* self, intptr_t slot);
void QListView_virtualbase_editorDestroyed(void* self, QObject* editor);
bool QListView_override_virtual_edit2(void* self, intptr_t slot);
bool QListView_virtualbase_edit2(void* self, QModelIndex* index, int trigger, QEvent* event);
bool QListView_override_virtual_selectionCommand(void* self, intptr_t slot);
int QListView_virtualbase_selectionCommand(const void* self, QModelIndex* index, QEvent* event);
bool QListView_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QListView_virtualbase_focusNextPrevChild(void* self, bool next);
bool QListView_override_virtual_viewportEvent(void* self, intptr_t slot);
bool QListView_virtualbase_viewportEvent(void* self, QEvent* event);
bool QListView_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QListView_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QListView_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QListView_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QListView_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QListView_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QListView_override_virtual_focusInEvent(void* self, intptr_t slot);
void QListView_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QListView_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QListView_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QListView_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QListView_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QListView_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QListView_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* event);
bool QListView_override_virtual_eventFilter(void* self, intptr_t slot);
bool QListView_virtualbase_eventFilter(void* self, QObject* object, QEvent* event);
bool QListView_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QListView_virtualbase_minimumSizeHint(const void* self);
bool QListView_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QListView_virtualbase_sizeHint(const void* self);
bool QListView_override_virtual_setupViewport(void* self, intptr_t slot);
void QListView_virtualbase_setupViewport(void* self, QWidget* viewport);
bool QListView_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QListView_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QListView_override_virtual_changeEvent(void* self, intptr_t slot);
void QListView_virtualbase_changeEvent(void* self, QEvent* param1);
bool QListView_override_virtual_devType(void* self, intptr_t slot);
int QListView_virtualbase_devType(const void* self);
bool QListView_override_virtual_setVisible(void* self, intptr_t slot);
void QListView_virtualbase_setVisible(void* self, bool visible);
bool QListView_override_virtual_heightForWidth(void* self, intptr_t slot);
int QListView_virtualbase_heightForWidth(const void* self, int param1);
bool QListView_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QListView_virtualbase_hasHeightForWidth(const void* self);
bool QListView_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QListView_virtualbase_paintEngine(const void* self);