qt/gen_qlistview.nim

proc fcQListView_override_virtual_visualRegionForSelection(self: pointer, slot: int) {.importc: "QListView_override_virtual_visualRegionForSelection".}
proc fQListView_virtualbase_selectedIndexes(self: pointer, ): struct_miqt_array{.importc: "QListView_virtualbase_selectedIndexes".}
proc fcQListView_override_virtual_selectedIndexes(self: pointer, slot: int) {.importc: "QListView_override_virtual_selectedIndexes".}
proc fQListView_virtualbase_updateGeometries(self: pointer, ): void{.importc: "QListView_virtualbase_updateGeometries".}
proc fcQListView_override_virtual_updateGeometries(self: pointer, slot: int) {.importc: "QListView_override_virtual_updateGeometries".}
proc fQListView_virtualbase_isIndexHidden(self: pointer, index: pointer): bool{.importc: "QListView_virtualbase_isIndexHidden".}
proc fcQListView_override_virtual_isIndexHidden(self: pointer, slot: int) {.importc: "QListView_override_virtual_isIndexHidden".}
proc fQListView_virtualbase_selectionChanged(self: pointer, selected: pointer, deselected: pointer): void{.importc: "QListView_virtualbase_selectionChanged".}
proc fcQListView_override_virtual_selectionChanged(self: pointer, slot: int) {.importc: "QListView_override_virtual_selectionChanged".}
proc fQListView_virtualbase_currentChanged(self: pointer, current: pointer, previous: pointer): void{.importc: "QListView_virtualbase_currentChanged".}
proc fcQListView_override_virtual_currentChanged(self: pointer, slot: int) {.importc: "QListView_override_virtual_currentChanged".}
proc fQListView_virtualbase_viewportSizeHint(self: pointer, ): pointer{.importc: "QListView_virtualbase_viewportSizeHint".}
proc fcQListView_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QListView_override_virtual_viewportSizeHint".}
proc fQListView_virtualbase_setModel(self: pointer, model: pointer): void{.importc: "QListView_virtualbase_setModel".}
proc fcQListView_override_virtual_setModel(self: pointer, slot: int) {.importc: "QListView_override_virtual_setModel".}
proc fQListView_virtualbase_setSelectionModel(self: pointer, selectionModel: pointer): void{.importc: "QListView_virtualbase_setSelectionModel".}
proc fcQListView_override_virtual_setSelectionModel(self: pointer, slot: int) {.importc: "QListView_override_virtual_setSelectionModel".}
proc fQListView_virtualbase_keyboardSearch(self: pointer, search: struct_miqt_string): void{.importc: "QListView_virtualbase_keyboardSearch".}
proc fcQListView_override_virtual_keyboardSearch(self: pointer, slot: int) {.importc: "QListView_override_virtual_keyboardSearch".}
proc fQListView_virtualbase_sizeHintForRow(self: pointer, row: cint): cint{.importc: "QListView_virtualbase_sizeHintForRow".}
proc fcQListView_override_virtual_sizeHintForRow(self: pointer, slot: int) {.importc: "QListView_override_virtual_sizeHintForRow".}
proc fQListView_virtualbase_sizeHintForColumn(self: pointer, column: cint): cint{.importc: "QListView_virtualbase_sizeHintForColumn".}
proc fcQListView_override_virtual_sizeHintForColumn(self: pointer, slot: int) {.importc: "QListView_override_virtual_sizeHintForColumn".}
proc fQListView_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QListView_virtualbase_inputMethodQuery".}
proc fcQListView_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QListView_override_virtual_inputMethodQuery".}
proc fQListView_virtualbase_selectAll(self: pointer, ): void{.importc: "QListView_virtualbase_selectAll".}
proc fcQListView_override_virtual_selectAll(self: pointer, slot: int) {.importc: "QListView_override_virtual_selectAll".}
proc fQListView_virtualbase_updateEditorData(self: pointer, ): void{.importc: "QListView_virtualbase_updateEditorData".}
proc fcQListView_override_virtual_updateEditorData(self: pointer, slot: int) {.importc: "QListView_override_virtual_updateEditorData".}
proc fQListView_virtualbase_updateEditorGeometries(self: pointer, ): void{.importc: "QListView_virtualbase_updateEditorGeometries".}
proc fcQListView_override_virtual_updateEditorGeometries(self: pointer, slot: int) {.importc: "QListView_override_virtual_updateEditorGeometries".}
proc fQListView_virtualbase_verticalScrollbarAction(self: pointer, action: cint): void{.importc: "QListView_virtualbase_verticalScrollbarAction".}
proc fcQListView_override_virtual_verticalScrollbarAction(self: pointer, slot: int) {.importc: "QListView_override_virtual_verticalScrollbarAction".}
proc fQListView_virtualbase_horizontalScrollbarAction(self: pointer, action: cint): void{.importc: "QListView_virtualbase_horizontalScrollbarAction".}
proc fcQListView_override_virtual_horizontalScrollbarAction(self: pointer, slot: int) {.importc: "QListView_override_virtual_horizontalScrollbarAction".}
proc fQListView_virtualbase_verticalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QListView_virtualbase_verticalScrollbarValueChanged".}
proc fcQListView_override_virtual_verticalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QListView_override_virtual_verticalScrollbarValueChanged".}
proc fQListView_virtualbase_horizontalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QListView_virtualbase_horizontalScrollbarValueChanged".}
proc fcQListView_override_virtual_horizontalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QListView_override_virtual_horizontalScrollbarValueChanged".}
proc fQListView_virtualbase_closeEditor(self: pointer, editor: pointer, hint: cint): void{.importc: "QListView_virtualbase_closeEditor".}
proc fcQListView_override_virtual_closeEditor(self: pointer, slot: int) {.importc: "QListView_override_virtual_closeEditor".}
proc fQListView_virtualbase_commitData(self: pointer, editor: pointer): void{.importc: "QListView_virtualbase_commitData".}
proc fcQListView_override_virtual_commitData(self: pointer, slot: int) {.importc: "QListView_override_virtual_commitData".}
proc fQListView_virtualbase_editorDestroyed(self: pointer, editor: pointer): void{.importc: "QListView_virtualbase_editorDestroyed".}
proc fcQListView_override_virtual_editorDestroyed(self: pointer, slot: int) {.importc: "QListView_override_virtual_editorDestroyed".}
proc fQListView_virtualbase_edit2(self: pointer, index: pointer, trigger: cint, event: pointer): bool{.importc: "QListView_virtualbase_edit2".}
proc fcQListView_override_virtual_edit2(self: pointer, slot: int) {.importc: "QListView_override_virtual_edit2".}
proc fQListView_virtualbase_selectionCommand(self: pointer, index: pointer, event: pointer): cint{.importc: "QListView_virtualbase_selectionCommand".}
proc fcQListView_override_virtual_selectionCommand(self: pointer, slot: int) {.importc: "QListView_override_virtual_selectionCommand".}
proc fQListView_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QListView_virtualbase_focusNextPrevChild".}
proc fcQListView_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QListView_override_virtual_focusNextPrevChild".}
proc fQListView_virtualbase_viewportEvent(self: pointer, event: pointer): bool{.importc: "QListView_virtualbase_viewportEvent".}
proc fcQListView_override_virtual_viewportEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_viewportEvent".}
proc fQListView_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_mousePressEvent".}
proc fcQListView_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_mousePressEvent".}
proc fQListView_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_mouseDoubleClickEvent".}
proc fcQListView_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_mouseDoubleClickEvent".}
proc fQListView_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_dragEnterEvent".}
proc fcQListView_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_dragEnterEvent".}
proc fQListView_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_focusInEvent".}
proc fcQListView_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_focusInEvent".}
proc fQListView_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_focusOutEvent".}
proc fcQListView_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_focusOutEvent".}
proc fQListView_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_keyPressEvent".}
proc fcQListView_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_keyPressEvent".}
proc fQListView_virtualbase_inputMethodEvent(self: pointer, event: pointer): void{.importc: "QListView_virtualbase_inputMethodEvent".}
proc fcQListView_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_inputMethodEvent".}
proc fQListView_virtualbase_eventFilter(self: pointer, objectVal: pointer, event: pointer): bool{.importc: "QListView_virtualbase_eventFilter".}
proc fcQListView_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QListView_override_virtual_eventFilter".}
proc fQListView_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QListView_virtualbase_minimumSizeHint".}
proc fcQListView_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QListView_override_virtual_minimumSizeHint".}
proc fQListView_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QListView_virtualbase_sizeHint".}
proc fcQListView_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QListView_override_virtual_sizeHint".}
proc fQListView_virtualbase_setupViewport(self: pointer, viewport: pointer): void{.importc: "QListView_virtualbase_setupViewport".}
proc fcQListView_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QListView_override_virtual_setupViewport".}
proc fQListView_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QListView_virtualbase_contextMenuEvent".}
proc fcQListView_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_contextMenuEvent".}
proc fQListView_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QListView_virtualbase_changeEvent".}
proc fcQListView_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_changeEvent".}
proc fQListView_virtualbase_devType(self: pointer, ): cint{.importc: "QListView_virtualbase_devType".}
proc fcQListView_override_virtual_devType(self: pointer, slot: int) {.importc: "QListView_override_virtual_devType".}
proc fQListView_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QListView_virtualbase_setVisible".}
proc fcQListView_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QListView_override_virtual_setVisible".}
proc fQListView_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QListView_virtualbase_heightForWidth".}
proc fcQListView_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QListView_override_virtual_heightForWidth".}
proc fQListView_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QListView_virtualbase_hasHeightForWidth".}
proc fcQListView_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QListView_override_virtual_hasHeightForWidth".}
proc fQListView_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QListView_virtualbase_paintEngine".}
proc fcQListView_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QListView_override_virtual_paintEngine".}
